--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,12 @@ set(CMAKE_CXX_STANDARD 17) # C++17标准
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 SET(CMAKE_BUILD_TYPE "Debug")  # Debug模式 选项: Release Debug MinSizeRel RelWithDebInfo
-# 针对不同模式设置编译选项
-if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-  add_compile_options(-O0 -Wall -g2)
-else(CMAKE_BUILD_TYPE STREQUAL "Release")
-  add_compile_options(-O3 -Wall)
-endif()
+# TODO 不同模式有什么区别 针对不同模式设置编译选项
+#if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+#  add_compile_options(-O0 -Wall -g2)
+#else(CMAKE_BUILD_TYPE STREQUAL "Release")
+#  add_compile_options(-O3 -Wall)
+#endif()
 
 # set(CMAKE_VERBOSE_MAKEFILE ON) # 开启调试 出现问题时开启
 
