--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project(sudoku)
 
 set(CMAKE_CXX_STANDARD 17)
 
-include_directories(SYSTEM ${CMAKE_CURRENT_SOURCE_DIR}/modules/include)
+include_directories(SYSTEM ${CMAKE_CURRENT_SOURCE_DIR}/impl/include)
 
-add_subdirectory(modules)
+add_subdirectory(impl)
 
 add_executable(${CMAKE_PROJECT_NAME} main.cpp)
