--- a/impl/CMakeLists.txt
+++ b/impl/CMakeLists.txt
@@ -1,8 +1,5 @@
-file(GLOB_RECURSE SUDOKU_SOURCES "src/*.cpp")
+file(GLOB_RECURSE SUDOKU_SOURCES "./*.cpp")
 
-
-include_directories(SYSTEM ${CMAKE_CURRENT_SOURCE_DIR}/include)
-
-message("-----------------${SUDOKU_SOURCES}")
+include_directories(SYSTEM ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_library(impl ${SUDOKU_SOURCES})
